# mcp_ansible_collection

./: .gitignore  .pre-commit-config.yaml  README.md  galaxy.yml  pyproject.toml
plugins/module_utils/: config.py  object_helpers.py  provider.py  utils.py
plugins/modules/: ansible_gw.py  credentials.py  firewall.py  firewall_info.py  geo_info.py  image_export.py  image_import.py  image_info.py  ip_list.py  ip_list_info.py  ipam_info.py  ipam_public.py  ipam_reserve.py  mcp_info.py  nat.py  nat_info.py  network.py  network_info.py  ntt_mcp_firewall.py  ntt_mcp_firewall_info.py  ntt_mcp_geo_info.py  ntt_mcp_image_export.py  ntt_mcp_image_info.py  ntt_mcp_ip_list.py  ntt_mcp_ip_list_info.py  ntt_mcp_nat.py  ntt_mcp_nat_info.py  ntt_mcp_network.py  ntt_mcp_network_info.py  ntt_mcp_port_list_info.py  ntt_mcp_sec_group_info.py  ntt_mcp_sec_group_member.py  ntt_mcp_server_antiaffinity.py  ntt_mcp_server_clone.py  ntt_mcp_server_controller.py  ntt_mcp_server_disk.py  ntt_mcp_server_monitoring.py  ntt_mcp_server_nic.py  ntt_mcp_snapshot_migrate.py  ntt_mcp_snapshot_restore.py  (+50 more)
tests/sanity/: ignore-2.9.txt
