[tool.poetry]
name = "mcp_ansible_collection"
version = "1.0.8"
description = "A collection for use with MCP"
authors = ["Ken Sinfield (@kensinfield) <ken.sinfield@cis.ntt.com>"]

[tool.poetry.dependencies]
python = "^3.8"
configparser = "^5.0.0"
requests = "^2.23.0"
pyopenssl = "^19.1.0"
netaddr = "^0.7.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
